<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:title="@string/home"
        android:icon="@drawable/nav_home" />
    <item
        android:id="@+id/menuAccessories"
        android:title="@string/accessories"
        android:icon="@drawable/nav_accessories"/>
    <item
        android:id="@+id/menuAutomation"
        android:title="@string/automation"
        android:icon="@drawable/nav_automation"
        />
    <item
        android:id="@+id/menuProfile"
        android:title="@string/profile"
        android:icon="@drawable/nav_profile"/>
    <item
        android:id="@+id/menuSetting"
        android:title="@string/setting"
        android:icon="@drawable/nav_setting"/>
</menu>