<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Accessories"
    android:background="@drawable/background_app">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:background="@drawable/border_white_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/language"
                        android:gravity="center"
                        android:textColor="@color/black" />

                </LinearLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border_black_1dp_background"
                            android:layout_weight="1">
                            <Spinner
                                android:id="@+id/language_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:entries="@array/languages" />
                        </LinearLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"/>

                    </LinearLayout>

                </LinearLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/theme"
                        android:gravity="center"
                        android:textColor="@color/black" />

                </LinearLayout>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/border_black_1dp_background"
                            android:layout_weight="1">
                            <Spinner
                                android:id="@+id/theme_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:entries="@array/theme"/>
                        </LinearLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"/>

                    </LinearLayout>


                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_form_login"
                    android:text="@string/save" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/about_app"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:text="@string/about_my_app_setting"
                    android:color="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"/>


    </LinearLayout>



</FrameLayout>
